Fixes some spacing issues

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -12,6 +12,14 @@ body, .btn
 body
   background-color: $background
 
+.btn-default
+  background-color: #ddd
+  border-color: #ddd
+
+  &:hover
+    background-color: #ccc
+    border-color: #bbb
+
 h1.logo, a.logo
   color: $logoColor
   font-family: 'Courgette', cursive
@@ -52,9 +60,8 @@ header.navbar
 h1
   font-family: $bodyFont
 
-.choice
+.center // I'm sorry
   text-align: center
-  padding-top: 12em
 
 .card
   background: #fff
@@ -74,6 +81,10 @@ h1
 
 .bands
   padding-left: 2em
+
+  h1
+    margin-top: 0
+    margin-bottom: .5em
 
   ul
     list-style: none
